--- a/Midterm_0412/Midterm/easyPois/NAMESPACE
+++ b/Midterm_0412/Midterm/easyPois/NAMESPACE
@@ -10,4 +10,5 @@ exportMethods(estimatePois)
 exportMethods(initialize)
 exportMethods(logLik)
 exportMethods(mle)
+exportMethods(plot)
 exportMethods(standardError)
